binaryen/src/Bindings/Binaryen/Raw.hs


foreign import ccall unsafe "BinaryenAddFunctionExport" c_BinaryenAddFunctionExport
  :: BinaryenModuleRef -> Ptr CChar -> Ptr CChar -> IO BinaryenExportRef

foreign import ccall unsafe "BinaryenAddTableExport" c_BinaryenAddTableExport
  :: BinaryenModuleRef -> Ptr CChar -> Ptr CChar -> IO BinaryenExportRef

foreign import ccall unsafe "BinaryenAddMemoryExport" c_BinaryenAddMemoryExport
  :: BinaryenModuleRef -> Ptr CChar -> Ptr CChar -> IO BinaryenExportRef

foreign import ccall unsafe "BinaryenAddGlobalExport" c_BinaryenAddGlobalExport
  :: BinaryenModuleRef -> Ptr CChar -> Ptr CChar -> IO BinaryenExportRef

foreign import ccall unsafe "BinaryenRemoveExport" c_BinaryenRemoveExport
  :: BinaryenModuleRef -> Ptr CChar -> IO ()

data BinaryenGlobal

type BinaryenGlobalRef = Ptr BinaryenGlobal

foreign import ccall unsafe "BinaryenAddGlobal" c_BinaryenAddGlobal
  :: BinaryenModuleRef ->
  Ptr CChar ->
    BinaryenType ->
      Int8 -> BinaryenExpressionRef -> IO BinaryenGlobalRef

foreign import ccall unsafe "BinaryenRemoveGlobal" c_BinaryenRemoveGlobal
  :: BinaryenModuleRef -> Ptr CChar -> IO ()

foreign import ccall unsafe "BinaryenSetFunctionTable" c_BinaryenSetFunctionTable
  :: BinaryenModuleRef ->
  BinaryenIndex ->
    BinaryenIndex -> Ptr (Ptr CChar) -> BinaryenIndex -> IO ()

foreign import ccall unsafe "BinaryenSetMemory" c_BinaryenSetMemory
  :: BinaryenModuleRef ->
  BinaryenIndex ->
    BinaryenIndex ->
      Ptr CChar ->
        Ptr (Ptr CChar) ->
          Ptr BinaryenExpressionRef ->
            Ptr BinaryenIndex -> BinaryenIndex -> Word8 -> IO ()

foreign import ccall unsafe "BinaryenSetStart" c_BinaryenSetStart
  :: BinaryenModuleRef -> BinaryenFunctionRef -> IO ()

foreign import ccall unsafe "BinaryenModuleParse" c_BinaryenModuleParse
  :: Ptr CChar -> IO BinaryenModuleRef

foreign import ccall unsafe "BinaryenModulePrint" c_BinaryenModulePrint
  :: BinaryenModuleRef -> IO ()

foreign import ccall unsafe "BinaryenModulePrintAsmjs" c_BinaryenModulePrintAsmjs
  :: BinaryenModuleRef -> IO ()

foreign import ccall unsafe "BinaryenModuleValidate" c_BinaryenModuleValidate
  :: BinaryenModuleRef -> IO CInt

foreign import ccall unsafe "BinaryenModuleOptimize" c_BinaryenModuleOptimize
  :: BinaryenModuleRef -> IO ()

foreign import ccall unsafe "BinaryenGetOptimizeLevel" c_BinaryenGetOptimizeLevel
  :: IO CInt

foreign import ccall unsafe "BinaryenSetOptimizeLevel" c_BinaryenSetOptimizeLevel
  :: CInt -> IO ()

foreign import ccall unsafe "BinaryenGetShrinkLevel" c_BinaryenGetShrinkLevel
  :: IO CInt

foreign import ccall unsafe "BinaryenSetShrinkLevel" c_BinaryenSetShrinkLevel
  :: CInt -> IO ()

foreign import ccall unsafe "BinaryenGetDebugInfo" c_BinaryenGetDebugInfo
  :: IO CInt

foreign import ccall unsafe "BinaryenSetDebugInfo" c_BinaryenSetDebugInfo
  :: CInt -> IO ()

foreign import ccall unsafe "BinaryenModuleRunPasses" c_BinaryenModuleRunPasses
  :: BinaryenModuleRef -> Ptr (Ptr CChar) -> BinaryenIndex -> IO ()

foreign import ccall unsafe "BinaryenModuleAutoDrop" c_BinaryenModuleAutoDrop
  :: BinaryenModuleRef -> IO ()

foreign import ccall unsafe "BinaryenModuleWrite" c_BinaryenModuleWrite
  :: BinaryenModuleRef -> Ptr CChar -> CSize -> IO CSize

foreign import ccall unsafe "BinaryenModuleWriteWithSourceMapMut" c_BinaryenModuleWriteWithSourceMapMut
  :: BinaryenModuleRef ->
  Ptr CChar ->
    Ptr CChar ->
      CSize -> Ptr CChar -> CSize -> Ptr CSize -> Ptr CSize -> IO ()

foreign import ccall unsafe "BinaryenModuleAllocateAndWriteMut" c_BinaryenModuleAllocateAndWriteMut
  :: BinaryenModuleRef ->
  Ptr CChar -> Ptr (Ptr ()) -> Ptr CSize -> Ptr (Ptr CChar) -> IO ()

foreign import ccall unsafe "BinaryenModuleRead" c_BinaryenModuleRead
  :: Ptr CChar -> CSize -> IO BinaryenModuleRef

foreign import ccall unsafe "BinaryenModuleInterpret" c_BinaryenModuleInterpret
  :: BinaryenModuleRef -> IO ()

foreign import ccall unsafe "BinaryenModuleAddDebugInfoFileName" c_BinaryenModuleAddDebugInfoFileName
  :: BinaryenModuleRef -> Ptr CChar -> IO BinaryenIndex

foreign import ccall unsafe "BinaryenModuleGetDebugInfoFileName" c_BinaryenModuleGetDebugInfoFileName
  :: BinaryenModuleRef -> BinaryenIndex -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenFunctionTypeGetName" c_BinaryenFunctionTypeGetName
  :: BinaryenFunctionTypeRef -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenFunctionTypeGetNumParams" c_BinaryenFunctionTypeGetNumParams
  :: BinaryenFunctionTypeRef -> IO BinaryenIndex

foreign import ccall unsafe "BinaryenFunctionTypeGetParam" c_BinaryenFunctionTypeGetParam
  :: BinaryenFunctionTypeRef -> BinaryenIndex -> IO BinaryenType

foreign import ccall unsafe "BinaryenFunctionTypeGetResult" c_BinaryenFunctionTypeGetResult
  :: BinaryenFunctionTypeRef -> IO BinaryenType

foreign import ccall unsafe "BinaryenFunctionGetName" c_BinaryenFunctionGetName
  :: BinaryenFunctionRef -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenFunctionGetType" c_BinaryenFunctionGetType
  :: BinaryenFunctionRef -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenFunctionGetNumParams" c_BinaryenFunctionGetNumParams
  :: BinaryenFunctionRef -> IO BinaryenIndex

foreign import ccall unsafe "BinaryenFunctionGetParam" c_BinaryenFunctionGetParam
  :: BinaryenFunctionRef -> BinaryenIndex -> IO BinaryenType

foreign import ccall unsafe "BinaryenFunctionGetResult" c_BinaryenFunctionGetResult
  :: BinaryenFunctionRef -> IO BinaryenType

foreign import ccall unsafe "BinaryenFunctionGetNumVars" c_BinaryenFunctionGetNumVars
  :: BinaryenFunctionRef -> IO BinaryenIndex

foreign import ccall unsafe "BinaryenFunctionGetVar" c_BinaryenFunctionGetVar
  :: BinaryenFunctionRef -> BinaryenIndex -> IO BinaryenType

foreign import ccall unsafe "BinaryenFunctionGetBody" c_BinaryenFunctionGetBody
  :: BinaryenFunctionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenFunctionOptimize" c_BinaryenFunctionOptimize
  :: BinaryenFunctionRef -> BinaryenModuleRef -> IO ()

foreign import ccall unsafe "BinaryenFunctionRunPasses" c_BinaryenFunctionRunPasses
  :: BinaryenFunctionRef ->
  BinaryenModuleRef -> Ptr (Ptr CChar) -> BinaryenIndex -> IO ()

foreign import ccall unsafe "BinaryenFunctionSetDebugLocation" c_BinaryenFunctionSetDebugLocation
  :: BinaryenFunctionRef ->
  BinaryenExpressionRef ->
    BinaryenIndex -> BinaryenIndex -> BinaryenIndex -> IO ()

foreign import ccall unsafe "BinaryenFunctionImportGetModule" c_BinaryenFunctionImportGetModule
  :: BinaryenFunctionRef -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryeGlobalImportGetModule" c_BinaryeGlobalImportGetModule
  :: BinaryenGlobalRef -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenFunctionImportGetBase" c_BinaryenFunctionImportGetBase
  :: BinaryenFunctionRef -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenGlobalImportGetBase" c_BinaryenGlobalImportGetBase
  :: BinaryenGlobalRef -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenExportGetKind" c_BinaryenExportGetKind
  :: BinaryenExportRef -> IO BinaryenExternalKind

foreign import ccall unsafe "BinaryenExportGetName" c_BinaryenExportGetName
  :: BinaryenExportRef -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenExportGetValue" c_BinaryenExportGetValue
  :: BinaryenExportRef -> IO (Ptr CChar)

data Relooper

type RelooperRef = Ptr Relooper

data RelooperBlock

type RelooperBlockRef = Ptr RelooperBlock

foreign import ccall unsafe "RelooperCreate" c_RelooperCreate
  :: BinaryenModuleRef -> IO RelooperRef

foreign import ccall unsafe "RelooperAddBlock" c_RelooperAddBlock
  :: RelooperRef -> BinaryenExpressionRef -> IO RelooperBlockRef

foreign import ccall unsafe "RelooperAddBranch" c_RelooperAddBranch
  :: RelooperBlockRef ->
  RelooperBlockRef ->
    BinaryenExpressionRef -> BinaryenExpressionRef -> IO ()

foreign import ccall unsafe "RelooperAddBlockWithSwitch" c_RelooperAddBlockWithSwitch
  :: RelooperRef ->
  BinaryenExpressionRef ->
    BinaryenExpressionRef -> IO RelooperBlockRef

foreign import ccall unsafe "RelooperAddBranchForSwitch" c_RelooperAddBranchForSwitch
  :: RelooperBlockRef ->
  RelooperBlockRef ->
    Ptr BinaryenIndex ->
      BinaryenIndex -> BinaryenExpressionRef -> IO ()

foreign import ccall unsafe "RelooperRenderAndDispose" c_RelooperRenderAndDispose
  :: RelooperRef ->
  RelooperBlockRef -> BinaryenIndex -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenSetAPITracing" c_BinaryenSetAPITracing
  :: CInt -> IO ()

foreign import ccall unsafe "BinaryenGetFunctionTypeBySignature" c_BinaryenGetFunctionTypeBySignature
  :: BinaryenModuleRef ->
  BinaryenType ->
    Ptr BinaryenType -> BinaryenIndex -> IO BinaryenFunctionTypeRef
